--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h5>SEI STATO HACKERATO</h5>
-    <h3 id="file"></h3>
+    <img src="scimmia.jpg" alt="no">
     <div class="loader-wrapper">
   <span class="loader-letter">c</span>
   <span class="loader-letter">o</span>
@@ -26,4 +26,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
